Update of hr margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,8 @@ hr {
     width: 5%;
     display: inline-block;
     text-align: center;
-    margin-inline: auto;
+    margin-top: 20px;
+    margin-bottom: 15px;
     height: 5px;
 }
 
