--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,11 @@ body {
 .intro {
     width: 50%;
     margin: auto;
-    line-height: 1.8;
+}
+
+.outro {
+    width: 60%;
+    margin: 20px auto;
 }
 
 .upper-container {
@@ -41,6 +45,7 @@ body {
 
 a {
     color: #11999E;
+    font-family: 'Montserrat', sans-serif;
 }
 
 hr {
@@ -87,6 +92,7 @@ h3 {
 
 p {
     margin-top: 5PX;
+    line-height: 1.8;
 }
 
 
@@ -97,16 +103,15 @@ p {
 }
 
 .bottom-cloud {
-    position: absolute;
+    position: relative;
     bottom: 300px;
-    left: 300px;
+    left: -50px;
 }
 
 .skill-row {
     width: 50%;
-    margin: 25px auto 25px auto;
+    margin: 45px auto 45px auto;
     text-align: left;
-    line-height: 1.8;
 }
 
 .language-image {
@@ -148,7 +153,7 @@ p {
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
     border-radius: 8px;
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
