--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ h3 {
     color: #11999E;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
-    margin-top: 0px;
+    padding-top: 1em;
     margin-bottom: 0px;
     font-weight: normal;
 }
