--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ h3 {
     border-radius: 8px;
     font-family: 'Montserrat', sans-serif;
     color: #ffffff;
-    font-size: 20px;
+    font-size: 1em;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
   }
